[gd_scene load_steps=13 format=2]

[ext_resource path="res://engine/sprites/ui/mainhud/numerals/numerals.tres" type="SpriteFrames" id=1]
[ext_resource path="res://engine/scenes/ui/button_prompt/ButtonPrompt.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/scenes/Samus/HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://engine/fonts/aquarius.regular-mono.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://engine/scenes/ui/map/MapGrid.tscn" type="PackedScene" id=5]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/0.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "visor_fade_in"

[sub_resource type="Animation" id=2]
resource_name = "visor_fade_out"

[sub_resource type="Animation" id=3]
resource_name = "energy_low_warning"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("EnergyDigits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 3.24902, 3.24902 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.258824, 0.258824, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ETanks:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 3.24902, 3.24902 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.258824, 0.258824, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buttons:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buttons:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ), Vector2( 468, 20 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buttons:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buttons:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ) ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "6"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/visor_fade_in = SubResource( 1 )
anims/visor_fade_out = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0

[node name="MapGrid" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.7194
margin_top = 6.752
margin_right = -51.7194
margin_bottom = 30.752
rect_scale = Vector2( 2, 2 )

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer/Control/Control"]
margin_left = 12.0
margin_top = 11.0
margin_right = 247.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 7 )
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyDigits" type="Control" parent="CanvasLayer/Control/Control/TopBar"]
margin_right = 25.0
margin_bottom = 14.0
rect_min_size = Vector2( 25, 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Digit0" type="AnimatedSprite" parent="CanvasLayer/Control/Control/TopBar/EnergyDigits"]
position = Vector2( 6, 7 )
frames = ExtResource( 1 )
animation = "fontA"

[node name="Digit1" type="AnimatedSprite" parent="CanvasLayer/Control/Control/TopBar/EnergyDigits"]
position = Vector2( 19, 7 )
frames = ExtResource( 1 )
animation = "fontA"

[node name="ETanks" type="VBoxContainer" parent="CanvasLayer/Control/Control/TopBar"]
margin_left = 28.0
margin_right = 28.0
margin_bottom = 14.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row0" type="HBoxContainer" parent="CanvasLayer/Control/Control/TopBar/ETanks"]
custom_constants/separation = 2

[node name="Row1" type="HBoxContainer" parent="CanvasLayer/Control/Control/TopBar/ETanks"]
margin_top = 2.0
margin_bottom = 2.0
custom_constants/separation = 2

[node name="Spacer" type="Control" parent="CanvasLayer/Control/Control/TopBar"]
margin_left = 31.0
margin_right = 32.0
margin_bottom = 14.0
rect_min_size = Vector2( 1, 0 )

[node name="WeaponIcons" type="HBoxContainer" parent="CanvasLayer/Control/Control/TopBar"]
margin_left = 35.0
margin_right = 135.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Control/TopBar"]
anims/energy_low_warning = SubResource( 3 )

[node name="VisorIcons" type="HBoxContainer" parent="CanvasLayer/Control/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -207.035
margin_top = 9.0
margin_right = -156.035
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Control/VisorIcons"]

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]

[node name="DeathScreen" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeathScreen"]
anims/open = SubResource( 4 )
anims/reset = SubResource( 5 )

[node name="Label" type="Label" parent="DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.573
margin_top = -130.178
margin_right = -294.573
margin_bottom = -105.178
rect_min_size = Vector2( 210, 25 )
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 6 )
text = "MISSION FAILURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="DeathScreen"]
margin_left = 454.0
margin_top = 536.0
margin_right = 922.0
margin_bottom = 552.0
rect_scale = Vector2( 2.2, 2.2 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RespawnButton" parent="DeathScreen/Buttons" instance=ExtResource( 2 )]
preview_text = "Return to save point"
default_text = "deathscreen_reloadsave"
default_action_key = "ui_accept"

[node name="HBoxContainer" type="HBoxContainer" parent="DeathScreen/Buttons"]
margin_left = 192.0
margin_right = 468.0
margin_bottom = 16.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" parent="DeathScreen/Buttons/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 147.0
margin_right = 276.0
preview_text = "Exit to title screen"
preview_texture = ExtResource( 6 )
default_text = "deathscreen_exit"
default_action_key = "ui_cancel"

[connection signal="resized" from="CanvasLayer/Control" to="." method="_on_Control_resized"]
